--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-site-verification" content="bPeyJ_S-8nWUQOJ-jHeV7UVtUrtM_aln4fud6O-cZHc" />
+    <meta name="naver-site-verification" content="1b411fa644f7f52be265d8706714642920964e37" />
     
     <title>긴급속보: 당신의 자동차 보험료, 몰래 새고 있습니다! (클릭 즉시 절약)</title>
     <meta name="description" content="수십만 원 절약 보장! 대한민국 운전자들이 숨기고 싶은 다이렉트 자동차 보험 최저가 비교 견적 사이트 95개 무작위 리스트. 지금 바로 확인하고 호갱 탈출하세요!">
@@ -2062,3 +2063,4 @@
 </body>
 
 </html>
+
